[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/BuildPopup.gd" id="1"]

[node name="BuildPopup" type="CanvasLayer"]
layer = 15
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "BUILD DE JUGADOR"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
text = "✕"

[node name="PlayerName" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "NombreJugador"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="TabStats" type="Button" parent="MainPanel/VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "ESTADÍSTICAS"

[node name="TabWeapons" type="Button" parent="MainPanel/VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "ARMAS"

[node name="TabItems" type="Button" parent="MainPanel/VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "OBJETOS"

[node name="ContentPanel" type="PanelContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/VBoxContainer/ContentPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentPanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
